# pokerMind

./: .env.example  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
apps/api/src/auth/dto/: connexion.dto.ts  inscription.dto.ts
apps/api/src/concepts/: concepts.controller.ts  concepts.data.ts  concepts.module.ts  concepts.service.ts
apps/api/src/mains/: mains.controller.ts  mains.module.ts  mains.service.ts  parser.service.ts
apps/api/src/mains/dto/: lister-mains.dto.ts  (+1 more)
apps/api/src/progression/: progression.controller.ts  progression.module.ts  progression.service.ts
apps/api/src/redis/: redis.service.ts
apps/api/src/review/: review.controller.ts  review.service.ts
apps/api/src/stats/: stats.controller.ts  stats.service.ts
apps/parser/: pyproject.toml
apps/parser/src/pokermind_parser/: __init__.py  main.py  modeles.py
apps/parser/src/pokermind_parser/parsers/: __init__.py  base.py  ggpoker.py  pokerstars.py  winamax.py
apps/parser/src/pokermind_parser/stats/: __init__.py  fuites.py  moteur.py
apps/parser/tests/: test_pokerstars.py  test_stats.py  test_winamax.py
apps/parser/tests/fixtures/: pokerstars_mains.py  winamax_mains.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  nav.tsx  page.tsx
apps/web/src/lib/: api.ts  preflop-ranges.ts
(+12 files in other folders)
